"java.server.launchMode": "Standard"

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,6 +30,7 @@
 					"source.organizeImports": "always"
 				},
 				"java.import.gradle.enabled": true,
+				"java.server.launchMode": "Standard"
 			}
 		}
 	}
