--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
 				"vscjava.vscode-java-pack",
 				"vscjava.vscode-lombok",
 				"vmware.vscode-boot-dev-pack",
-				"vscjava.vscode-gradle"
+				"vscjava.vscode-gradle",
+				"redhat.java"
 			],
 			"settings": {
 				"workbench.colorTheme": "Default High Contrast",
@@ -30,7 +31,20 @@
 					"source.organizeImports": "always"
 				},
 				"java.import.gradle.enabled": true,
-				"java.server.launchMode": "Standard"
+				"java.server.launchMode": "Standard",
+				"java.completion.favoriteStaticMembers": [
+					"org.junit.Assert.*",
+					"org.junit.Assume.*",
+					"org.junit.jupiter.api.Assertions.*",
+					"org.junit.jupiter.api.Assumptions.*",
+					"org.junit.jupiter.api.DynamicContainer.*",
+					"org.junit.jupiter.api.DynamicTest.*",
+					"org.mockito.Mockito.*",
+					"org.mockito.ArgumentMatchers.*",
+					"org.mockito.Answers.*",
+					"org.assertj.core.api.Assertions.*",
+					"org.springframework.test.web.servlet.*"
+				]
 			}
 		}
 	}
